# os-book-c

./: .gitignore  CMakeLists.txt  README.md
chap2/2_24_filecopy/: main.c
chap2/proj/: jiffies.c
chap3/3_18_zombies/: main.c
chap3/3_19_time/pipe/: main.c
chap3/3_19_time/shared_memory/: main.c
chap3/3_20_pid_allocation/: main.c
chap3/3_26_case_reverse/: main.c
chap3/proj1/: main.c
chap3/proj2/: pid.c
chap3/proj3/: tasks_dfs.c  tasks_linear.c
chap3/proj4/: collatz.c  lists.c
chap4/4_22_array_stat/: main.c
chap4/4_24_monte_carlo_pi/: main.c
chap4/4_25_monte_carlo_pi_openmp/: main.c
chap4/4_28_pid_allocation_parallel/: main.c  main.h
chap4/proj1/: main.c
